Addresses issue #1427. Changed padding to prevent overflow of read more link

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -25,7 +25,12 @@
   word-wrap: break-word ;
   overflow: hidden  
 }
-
+.news_preview
+{
+  //padding:7px;
+  //height:184px"  
+  
+}
 .news_featured_image
 {
   float:left;
